Fix layout issue on Safari
Would not break to new row, and "save" would be to the right.

--- a/public/style_backend.css
+++ b/public/style_backend.css
@@ -236,6 +236,9 @@ legend   { font-weight: bold; }
 
 .active { font-weight: bold; text-decoration: underline; }
 
+/* Break to new flexbox row. */
+.flex-break { flex-basis: 100%; height: 0; }
+
 table.auto { width: auto; }
 
 .browser-charts       { display: flex; justify-content: space-between; }
